<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">
    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        
        <TextView
    		android:id="@+id/TextViewTitle"
   		 	android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:text="@string/new_item"
    		android:textSize="10pt">
		</TextView>
		
        <LinearLayout android:layout_width="fill_parent"
    		android:layout_height="fill_parent" >
		<TextView android:id="@+id/TextViewID"
    		android:layout_width="0dip"
   		 	android:layout_height="wrap_content"
   		 	android:layout_weight="1"
    		android:padding="10dp"
   			android:textSize="10pt" 
   			android:text = "@string/enter_id"/>
        <EditText
    		android:id="@+id/EditTextID"
    		android:layout_height="wrap_content"
    		android:hint="@string/enter_id"
    		android:inputType="number"
    		android:layout_width="fill_parent">
		</EditText>
		</LinearLayout>

        <LinearLayout android:layout_width="fill_parent"
    		android:layout_height="fill_parent" >
		<TextView android:id="@+id/TextViewType"
    		android:layout_width="0dip"
   		 	android:layout_height="wrap_content"
   		 	android:layout_weight="1"
    		android:padding="10dp"
   			android:textSize="10pt" 
   			android:text = "@string/item_type"/>
        <Spinner
    		android:id="@+id/SpinnerItemType"
    		android:layout_height="wrap_content"
    		android:prompt="@string/item_type"
    		android:layout_width="fill_parent"
    		android:entries="@array/item_type_list">
		</Spinner>
		</LinearLayout>
		
        <LinearLayout android:layout_width="fill_parent"
    		android:layout_height="fill_parent" >
		<TextView android:id="@+id/TextViewName"
    		android:layout_width="0dip"
   		 	android:layout_height="wrap_content"
   		 	android:layout_weight="1"
    		android:padding="10dp"
   			android:textSize="10pt" 
   			android:text = "@string/enter_name"/>
        <EditText
    		android:id="@+id/EditTextName"
    		android:layout_height="wrap_content"
    		android:hint="@string/enter_name"
    		android:inputType="textPersonName"
    		android:layout_width="fill_parent">
		</EditText>
		</LinearLayout>
		
        <LinearLayout android:layout_width="fill_parent"
    		android:layout_height="fill_parent" >
		<TextView android:id="@+id/TextViewSupplier"
    		android:layout_width="0dip"
   		 	android:layout_height="wrap_content"
   		 	android:layout_weight="1"
    		android:padding="10dp"
   			android:textSize="10pt" 
   			android:text = "@string/select_supplier"/>
		<Spinner
    		android:id="@+id/SpinnerSupplier"
    		android:layout_height="wrap_content"
    		android:prompt="@string/enter_supplier"
    		android:layout_width="fill_parent"
    		android:entries="@array/supplier_list">
		</Spinner>
      <!--   <EditText
    		android:id="@+id/EditTextSupplier"
    		android:layout_height="wrap_content"
    		android:hint="@string/enter_supplier"
    		android:inputType="textPersonName"
    		android:layout_width="fill_parent">
		</EditText>    -->
		</LinearLayout>
		
		<LinearLayout android:layout_width="fill_parent"
    		android:layout_height="fill_parent" >
		<TextView android:id="@+id/TextViewMin"
    		android:layout_width="0dip"
   		 	android:layout_height="wrap_content"
   		 	android:layout_weight="1"
    		android:padding="10dp"
   			android:textSize="10pt" 
   			android:text = "@string/enter_min"/>
        <EditText
    		android:id="@+id/EditTextMin"
    		android:layout_height="wrap_content"
    		android:hint="@string/enter_min"
    		android:inputType="numberDecimal"
    		android:layout_width="fill_parent">
		</EditText>
		</LinearLayout>
		
        <LinearLayout android:layout_width="fill_parent"
    		android:layout_height="fill_parent" >
		<TextView android:id="@+id/TextViewMax"
    		android:layout_width="0dip"
   		 	android:layout_height="wrap_content"
   		 	android:layout_weight="1"
    		android:padding="10dp"
   			android:textSize="10pt" 
   			android:text = "@string/enter_max"/>
        <EditText
    		android:id="@+id/EditTextMax"
    		android:layout_height="wrap_content"
    		android:hint="@string/enter_max"
    		android:inputType="numberDecimal"
    		android:layout_width="fill_parent">
		</EditText>
		</LinearLayout>
        
        <Button
   		 	android:id="@+id/ButtonSave"
    		android:layout_height="wrap_content"
    		android:text="@string/save_button"
    		android:onClick="saveItem"
    		android:layout_width="fill_parent">
		</Button>
 
    </LinearLayout>
</ScrollView>
