<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:gravity="center_vertical" 
    android:background="#000000"
    >
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_inventory" 
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
    	android:onClick = "launchInventory"
    	android:textColor = "#000000"
    	android:background = "@drawable/main_button" />
    
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_orders"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp" 
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:onClick="launchOrders"
        android:textColor = "#000000"
        android:background = "@drawable/main_button" />
    
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_database"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp" 
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:onClick="launchDatabase"
        android:textColor = "#000000"
        android:background = "@drawable/main_button" />
     
</LinearLayout>